# work

./: .gitignore  DocumentProcessorVer1.py  DocumentProcessorVer2.py  DocumentProcessorVer2_ppt.py  DocumentProcessorVer3.py  PyPdfiumDocumentBackend_output.md  ____.py  __pike.py  batch_script.sh  batch_script1.sh  batch_script1_gpu.sh  batch_script2.sh  batch_script2_cpu.sh  beforebatch_DocumentProcessorVer2_ppt.py  cld_fastfail_mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization.py  doc_tool.py  fitz_content_stream.py  fitz_test.md  formula_mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization.py  is_mostly_scanned_pdf_fitz.py  json_temp.py  main.py  mm_doc_tool_docbatch.py  mm_doc_tool_docbatch_fallback.py  mm_doc_tool_docbatch_fallback_figureclass.py  mm_doc_tool_docbatch_fallback_figureclass_basemodel.py  mm_doc_tool_docbatch_fallback_figureclass_basemodel_fast.py  mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization copy.py  mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization.py  mm_doc_tool_docbatch_fallback_figureclass_multiGPU.py  mm_doc_tool_docbatch_fallback_inline.py  mm_doc_tool_docbatch_multigpu.py  mm_doc_tool_docbatchver.py  newfastfail_mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization.py  no_cpu_set_mm_doc_tool_docbatch_fallback_figureclass_basemodel_quantization.py  ppt-chart.py  pyproject.toml  sole_docling.py  stream.py  t.py  (+5 more)
formula-parsed-outputs/: Claude Sonnet 4.5 System Card.md  parsing_log.txt
logs_1/: err_873085.err  out_873085.out
parsed-outputs-cpu-core8/: 25.8._._0807.1.md  (+12 more)
(+18 files in other folders)
