[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.64.0",
    "markitdown[all]>=0.1.4",
    "pikepdf>=10.0.2",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.7",
    "python-pptx>=1.0.2",
]
